fixed issue of username causing overflow on longer email addresses and also fixes responsiveness on profile page

--- a/zubhub_frontend/zubhub/src/assets/css/index.css
+++ b/zubhub_frontend/zubhub/src/assets/css/index.css
@@ -529,6 +529,12 @@ html,
   font-family: 'Raleway';
 }
 
+@media screen and (max-width: 417px) {
+  .comment-text {
+    font-size: 1rem;
+  }
+}
+
 .comment-box.comment {
   -webkit-box-shadow: 0px 0px 3px 1px rgba(0, 184, 196, 0.4);
   -moz-box-shadow: 0px 0px 3px 1px rgba(0, 184, 196, 0.4);
